--- a/config.json
+++ b/config.json
@@ -5,6 +5,12 @@
         "fingerprint": {
             "enabled": false,
             "sensorPath": "/dev/ttyUSB0"
+        },
+        "images": {
+            "user-images-path": "images/",
+            "user-images-prefix": "user-",
+            "inventory-images-path": "images/",
+            "inventory-images-prefix": ""
         }
     }
 }
