--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "Settings" : {
-        "device" : "desktop",
+        "device" : "desktopf",
 
         "fingerprint": {
             "enabled": false,
