Temp commit on master to see what's going on

--- a/config.json
+++ b/config.json
@@ -14,7 +14,7 @@
             "resource-images-path": "images/resource/"
         },
         "database": {
-            "path": "sql/test.db"
+            "path": "sql/SIMS.db"
         }
     }
 }
