--- a/config.json
+++ b/config.json
@@ -4,7 +4,8 @@
 
         "fingerprint": {
             "enabled": false,
-            "sensorPath": "/dev/ttyUSB0"
+            "sensorPath": "/dev/ttyUSB0",
+            "baudRate": 9600
         },
         "images": {
             "user-images-path": "images/users/",
