--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
     "Settings" : {
-        "device" : "desktopf",
+        "device" : "desktop",
 
         "fingerprint": {
-            "enabled": false,
+            "enabled": true,
             "sensorPath": "/dev/ttyUSB0",
             "baudRate": 9600
         },
