modified identify_user() in user_details.py to use fingerprint table

--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
         "device" : "desktop",
 
         "fingerprint": {
-            "enabled": false,
-            "sensorPath": "/dev/ttyUSB0",
+            "enabled": true,
+            "sensorPath": "/dev/serial0",
             "baudRate": 9600
         },
         "images": {
