--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
 
         "fingerprint": {
             "enabled": true,
-            "sensorPath": "/dev/ttyUSB0",
+            "sensorPath": "/dev/serial0",
             "baudRate": 9600
         },
         "images": {
